<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="130dp" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="388dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="37dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="247dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="247dp" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        tools:layout_editor_absoluteX="279dp"
        tools:layout_editor_absoluteY="247dp" />
</LinearLayout>