<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editarcarro.EditarCarroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputPlacaEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:hint="@string/car_plate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputMarcaEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:hint="@string/car_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputModeloEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:hint="@string/car_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>




            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputAnoEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:inputType="number"
                    android:hint="@string/car_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputUrlImagemEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:hint="@string/url_image_car"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputValorEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:inputType="numberDecimal"
                    android:hint="@string/car_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>